--- a/src/app/app/app.component.html
+++ b/src/app/app/app.component.html
@@ -239,7 +239,7 @@
                                            nbInput
                                            fullWidth
                                            placeholder="Password"
-                                           name="firstName"
+                                           name="password"
                                            [(ngModel)]="model.password"
                                            #password="ngModel"
                                            minlength="6"
@@ -261,7 +261,7 @@
                                            nbInput
                                            fullWidth
                                            placeholder="Confirm password"
-                                           name="firstName"
+                                           name="confirmPassword"
                                            [(ngModel)]="model.confirmPassword"
                                            #confirmPassword="ngModel"
                                            minlength="6"
